<resources>
    <string name="app_name">My Application</string>
    <string name="start_the_workout">START \nYOUR \nWORKOUT</string>
    <string name="nav_bar_home_text">Home</string>
    <string name="nav_bar_recent_text">Recent Act.</string>
    <string name="nav_bar_history_text">History</string>
    <string name="nav_bar_settings_text">Settings</string>
    <string name="total_kms">Total kms.</string>
    <string name="total_runs">Total runs</string>
    <string name="total_duration">Min : Sec</string>
    <string name="total_calories">Calories</string>
    <string name="recent_activity_mainpage_text">Recent Activity</string>
</resources>
