<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeItem"
        android:enabled="true"
        android:checked="false"
        android:icon="@mipmap/ic_home_black_48dp"
        android:title="@string/nav_bar_home_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/recentActivityItem"
        android:enabled="true"
        android:checked="false"
        android:icon="@mipmap/ic_directions_run_black_48dp"
        android:title="@string/nav_bar_recent_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/historyItem"
        android:enabled="true"
        android:checked="false"
        android:icon="@mipmap/ic_update_black_48dp"
        android:title="@string/nav_bar_history_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settingsItem"
        android:enabled="true"
        android:checked="false"
        android:icon="@mipmap/ic_settings_black_48dp"
        android:title="@string/nav_bar_settings_text"
        app:showAsAction="ifRoom" />
</menu>