<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/running_background"
    android:gravity="center_horizontal"
    tools:context="com.lucasfarias.workouttracker.MainActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/material_margin_xxxlarge"
        android:background="@drawable/circle_shape"
        android:scaleType="centerCrop"
        android:text="@string/start_the_workout"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="italic" />

    <RelativeLayout
        android:id="@+id/contentDetailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_marginTop="@dimen/material_margin_large">

        <LinearLayout
            android:id="@+id/firstColumnCustomGridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_margin_large"
            android:layout_marginStart="@dimen/material_margin_large"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/material_padding_xlarge">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/material_padding_small"
                android:text="@string/total_kms"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/totalKms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                tools:text="10.45" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_padding_medium"
                android:padding="@dimen/material_padding_small"
                android:text="@string/total_runs"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/totalRuns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                tools:text="2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondColumnCustomGridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/material_margin_large"
            android:layout_marginRight="@dimen/material_margin_large"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/material_padding_xlarge">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/material_padding_small"
                android:text="@string/total_duration"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/totalDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                tools:text="48:55" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_padding_medium"
                android:padding="@dimen/material_padding_small"
                android:text="@string/total_calories"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/totalCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                tools:text="1050" />
        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorNavViewBackground"
        app:itemIconTint="@color/navigation_selector"
        app:itemTextColor="@color/navigation_selector"
        app:menu="@menu/bottom_bar_menu" />

</RelativeLayout>